--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
+body{
+    margin: 0;
+}
 main{
     width: 1320px;
-    
+
 }
 
 .hero-section{
@@ -25,6 +28,17 @@ main{
     height: 600px;
 }
 
-.party h1, p{
+.party h1{
     color: aliceblue;
+}
+
+.subscribe{
+    height: 616px;
+    background-color: #FFF2F2;
+    border-radius: 15px;
+}
+
+footer{
+    height: 609px;
+    background-color: #070211;
 }
