--- a/css/style.css
+++ b/css/style.css
@@ -84,21 +84,85 @@ font-weight: 600;
 
 .party{
     background-image:url('../images/Vectorrr.png');
-    height: 600px;
+    background-repeat: no-repeat;
+    height: 400px;
     margin: 0 0 50px 0;
+    padding: 200px 0px 0 100px;
+    position: relative;
+}
+
+.party::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    
 }
 
 .party h1{
     color: aliceblue;
+    position: relative;
+    font-size: 56px;
 }
 
+.party p{
+    color: aliceblue;
+    position: relative;
+    font-size: 16px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+
+.party button{
+    position: relative;
+    padding: 10px;
+    background: rgb(255, 255, 255);
+    border: none;
+    font-weight: 400;
+    border-radius: 5px;
+}
+.portfolio {
+    margin-bottom: 100px;
+}
+.portfolio h5 {
+    color: red; 
+   
+}
+.portfolio p {
+    color: rgb(7, 2, 17, .6);
+    padding: 5px 0 20px 0;
+   
+}
+.portfolio .portfolio-images{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
 .subscribe{
     height: 616px;
     background-color: #FFF2F2;
     border-radius: 15px;
+    padding: 100px 0 80px 0;
+    text-align: center;
 }
 
 .subscribe h1{
+}
+.subscribe input{
+    border: none;
+    padding: 10px;
+    background-color: red;
+    color: white;
+}
+#email{
+    background-color: white;
+border-left: 15px;
 }
 
 footer{
